# experiment-template

./: .gitignore  CLAUDE.md  README.md  data-columns-output.json  index.html  instructions_template.js  package.json  params_template.js  runSingleTrial_template.js  runexperiment.html  standard_functions.js  timelineFlow_template.js
docs/: troubleshooting.md
docs/setup/: getting-started.md  wave-integration.md
src/js/core/: instructions.js  params.js  timeline.js
src/js/integrations/: wave-client.js
src/js/utils/: standard-functions.js
tools/: TODO.md  analyze_experiment.ipynb  cleanup_test_experiments.ipynb  setup_experiment.ipynb  utils.py
tools/setup_experiment/: .env.example  .gitignore  pyproject.toml
