[project]
name = "setup-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "wave-client",
]

[tool.uv.sources]
wave-client = { url = "https://github.com/WAVE-Lab-Williams/wave-client/releases/latest/download/wave_client-1.0.0-py3-none-any.whl" }
